posiGen_FullsendBox/src/objects/z_ChildRelationship__c.object
<CustomObject>
    <description>Created by the Metadata API</description>
    <fields>
        <fullName>childobjectname__c</fullName>
        <label>Child SObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldname__c</fullName>
        <label>Filed Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCascadeDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCascadeDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>z_ChildSObjectDescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child SObject</label>
        <referenceTo>z_SObjectDescription__c</referenceTo>
        <relationshipLabel>ChildRelations (z_ChildSObjectDescription)</relationshipLabel>
        <relationshipName>z_ChildRelationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>z_ParentSObjectDescription__c</fullName>
        <label>Parent SObject</label>
        <referenceTo>z_SObjectDescription__c</referenceTo>
        <relationshipLabel>ChildRelations (z_ParentSObjectDescription)</relationshipLabel>
        <relationshipName>z_ChildRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ChildRelation</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>ChildRelation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChildRelations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>